# devcontainer_template

./: .gitignore  2026-02-26-research-devcontainer-template-design.md  2026-02-26-research-devcontainer-template-plan.md  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
containers/: Dockerfile
docs/: index.md  jupyter-hpc.md
src/my_project.egg-info/: SOURCES.txt  requires.txt
tests/: test_placeholder.py
